src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


@layer base
{
  :root {
    --pri:#d5c8af;
    --sec:#2c313d;
    --acc:#475569;
    
  }
  @media (prefers-color-scheme: dark) {
    :root {
      --pri:#2c313d;
      --sec:#d5c8af;
      --acc:#475569;
    }
  }
  
  html{ 
    @apply scroll-smooth bg-pri overflow-x-hidden font-barlow text-sec
  }
}

h1 {
  @apply font-righteous
}

.showBorder{
  @apply outline outline-2 
}

/* menu hover strike through animation */

.strike {
  @apply cursor-pointer block relative;
}

.strike:before, .strike:after {
  content: '';
  position: absolute;
  width: 0%;
  height: 1.5px;
  top: 50%;
  margin-top: 0.5px;
}

.strike:before {
  left: -2.5px;
}
.strike:after {
  right: 2.5px;
  background: white;
  transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
}

.strike:hover:before {
  background: white;
  width: 100%;
  transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
}

.strike:hover:after {
  background: transparent;
  width: 100%;
  transition: 0s;
}

.slide-in {  
  @apply !translate-x-0 !translate-y-0 !opacity-100
}

.AOS {
  @apply  opacity-0 transition-all ease-in duration-1000
}

.from-R {
  @apply translate-x-[4rem]
}

.from-L {
  @apply -translate-x-[4rem]
}

.from-B {
  @apply translate-y-[4rem]
}

.from-T {
  @apply -translate-y-[4rem]
}

.navItem {
  @apply block px-8 py-6 float-right 
}

@media screen and (max-width: 639px) {
  .topnav a:not(:first-child) {display: none;}
  .topnav a.burger {
    @apply float-right block                                                                                                                                                             
  }
  .AOS {
    @apply transition-none !translate-x-0 !translate-y-0 !opacity-100
  }
}

/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon.*/
@media screen and (max-width: 639px) {
  .topnav.responsive {position: relative;}
  .topnav.responsive a.burger {
    @apply absolute top-0 right-0
  }
  .topnav.responsive a { 
    @apply text-right block float-none
  }
}

